@@ -1,3 +1,12 @@
+2004-05-24  Bruno Haible  <bruno@clisp.org>
+
+	* built.d: New file.
+	* lispbibl.d (built_flags): New declaration.
+	* spvw.d (init_object_tab): Call it.
+	* makemake.in (CPARTS): Add built. Let built.o, not spvw.o, depend on
+	cflags.h.
+	* po/Makefile.devel (DSOURCES): Add built.
+
 2004-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* backquote.lisp: Reorder.
